--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "class-validator": "^0.12.2"
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.12.2",
+    "reflect-metadata": "^0.1.13"
   }
 }
