--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon --watch src -e ts --exec ts-node src/index.ts"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.7.14",
     "@types/node": "^13.13.4",
     "nodemon": "^2.0.3",
     "ts-node": "^8.9.1",
@@ -17,6 +18,7 @@
   "dependencies": {
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "mongoose": "^5.9.11",
     "reflect-metadata": "^0.1.13"
   }
 }
