--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.14",
+    "@types/multer": "^1.4.3",
     "@types/node": "^13.13.4",
     "nodemon": "^2.0.3",
     "ts-node": "^8.9.1",
@@ -21,6 +22,7 @@
     "class-validator": "^0.12.2",
     "express": "^4.17.1",
     "mongoose": "^5.9.11",
+    "multer": "^1.4.2",
     "reflect-metadata": "^0.1.13"
   }
 }
