--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -37,5 +39,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:3000"
+  "proxy": "http://localhost:3000",
+  "devDependencies": {
+    "@types/redux-logger": "^3.0.7"
+  }
 }
