--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
@@ -42,6 +44,8 @@
   },
   "proxy": "http://localhost:3000",
   "devDependencies": {
+    "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
     "@types/redux-logger": "^3.0.7"
   }
 }
