--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon --watch src -e ts --exec ts-node src/index.ts"
   },
   "devDependencies": {
+    "@types/connect-history-api-fallback": "^1.3.3",
     "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.14",
     "@types/multer": "^1.4.3",
@@ -20,6 +21,7 @@
   "dependencies": {
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "connect-history-api-fallback": "^1.6.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.11",
     "multer": "^1.4.2",
